# reminders

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  package-lock.json  pyproject.toml  render.yaml  tailwind.config.js  yoyo.ini
migrations/: 01.create_reminder.sql
reminders/: main.py
reminders/db/: connection.py  reminder.py
reminders/model/: reminder.py
reminders/routes/: reminders_route.py
spa/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
spa/services/: reminderService.js
spa/src/: App.jsx
spa/src/components/: AddReminder.jsx  Footer.jsx  Reminder.jsx
